crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_name_start.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected a quoted test name.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Give the test a name in double quotes.
