crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_once_on_unit_test.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "test \"name\" once = 1"
---
nash::syntax

  × Unit tests already run once.
   ╭─[src/Main.nash:1:13]
 1 │ test "name" once = 1
   ·             ─
   ╰────
  help: Remove `once`, or use a property declaration for generated inputs.
