crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "test\t\"name\" = 1"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:5]
 1 │ test    "name" = 1
   ·     ────
   ╰────
  help: Replace the tab with spaces.
