crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_via.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "prop \"name\" = let x generate in do"
---
nash::syntax

  × Expected `via` after the input pattern.
   ╭─[src/Main.nash:1:21]
 1 │ prop "name" = let x generate in do
   ·                     ─
   ╰────
  help: Add `via` followed by the generator expression.
