crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_within_duplicate.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
DUPLICATE TEST BUDGET

  × This budget kind has already been specified:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Keep one limit for each budget kind in the `within` clause.
