crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_within_end.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "test \"name\" within (cpu 1 "
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:27]
 1 │ test "name" within (cpu 1 
   ·                    ┬      ┬
   ·                    │      ╰── expected `)`
   ·                    ╰── opened here
   ╰────
  help: Add `)` here.
