crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_within_kind.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::diagnostic

  × I was expecting a test budget kind here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Use `cpu` or `mem` followed by an integer limit.
