crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_within_number.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "test \"name\" within (cpu 12x)"
---
nash::syntax

  × Invalid integer literal.
   ╭─[src/Main.nash:1:25]
 1 │ test "name" within (cpu 12x)
   ·                         ─
   ╰────
  help: Use decimal or hexadecimal integers; floating point numbers are not supported.
