crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_test_within_open.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Expected `(` after `within`.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Put budget limits inside parentheses.
