crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_tests_alignment.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Test declarations must align.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Start each declaration in column 3.
