crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_tests_import.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Incomplete module declaration.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Write `module Name exposing (..)`.
